--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,7 +15,7 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 1rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
@@ -105,7 +105,6 @@
 
 .logo {
   height: 1em;
-  margin-left: 0.5rem;
 }
 
 @media (max-width: 600px) {
@@ -113,4 +112,39 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.mainImageCont {
+  width: 100%;
+  max-width: 800px;
+  height: 500px;
+  position: relative;
+  margin-bottom: 3rem;
+}
+
+.mainImage {
+  border-radius: 16px;
+}
+
+.imagesContainer {
+  width: 100%;
+  max-width: 800px;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.imagesItem {
+  width: 80px;
+  height: 50px;
+  position: relative;
+  flex-direction: row;
+  display: inline-block;
+  margin: 10px;
+  border-radius: 10px;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.imagesItem:hover {
+  box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.15);
 }
