--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,24 +28,26 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
+.link a {
+  padding: 0.5rem 2rem;
+  color: rgb(134, 100, 56);
   text-decoration: none;
+  cursor: pointer;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
+.link a:hover,
+.link a:focus,
+.link a:active {
   text-decoration: underline;
 }
 
-.title {
-  margin: 0;
+.link {
+  padding-top: 1rem;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 1rem;
 }
 
-.title,
+.link,
 .description {
   text-align: center;
 }
